[tool.poetry]
name = "open-pki"
version = "0.4.0"
description = "A Django app to create and manage certificates"
authors = ["Sander Bos <mail@sanderbos.net>"]
readme = "README.md"
repository = "https://github.com/bossan/openpki"
keywords = ["pki", "django"]
packages = [{ include = "pki", from = "src" }]

[tool.poetry.dependencies]
python = ">= 3.10 < 3.13"
django = "5.1.1"
cryptography = "^43.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
bandit = "^1.7.9"
vulture = "^2.11"

[tool.bandit]
exclude_dirs = [
    'tests',
    'migrations',
    'venv',
]

[tool.vulture]
exclude = ['migrations']
min_confidence = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
